--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -285,5 +285,61 @@
                     android:text="true"
                     />
         </TableRow>
+
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Android system"
+                    android:layout_span="2"
+                    style="@style/Widget.Category"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Version:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_version"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="true"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="API Level:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_api_level"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="true"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Build tags:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_build_tags"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="true"
+                    />
+        </TableRow>
     </TableLayout>
 </ScrollView>
