--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -308,7 +308,22 @@
                     android:id="@+id/text_version"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="true"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ID:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_id"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
                     />
         </TableRow>
         <TableRow android:layout_width="match_parent"
@@ -323,7 +338,7 @@
                     android:id="@+id/text_api_level"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="true"
+                    android:text="unknown"
                     />
         </TableRow>
         <TableRow android:layout_width="match_parent"
@@ -338,7 +353,168 @@
                     android:id="@+id/text_build_tags"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="true"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Bootloader:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_bootloader"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Radio:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_radio"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Device"
+                    android:layout_span="2"
+                    style="@style/Widget.Category"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Manufacturer:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_manufacturer"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Brand:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_brand"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Model:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_model"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Product:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_product"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Design:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_design"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Board:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_board"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Serial number:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_serial_number"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hardware:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_hardware"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
                     />
         </TableRow>
     </TableLayout>
