--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -386,6 +386,36 @@
                     android:text="unknown"
                     />
         </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Host:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_host"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="User:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_user"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
 
         <TableRow android:layout_width="match_parent"
                   android:layout_height="wrap_content">
@@ -492,21 +522,6 @@
             <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Serial number:"
-                    style="@style/Widget.Label"
-                    />
-            <TextView
-                    android:id="@+id/text_serial_number"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="unknown"
-                    />
-        </TableRow>
-        <TableRow android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-            <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
                     android:text="Hardware:"
                     style="@style/Widget.Label"
                     />
@@ -517,5 +532,21 @@
                     android:text="unknown"
                     />
         </TableRow>
+        <TableRow android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Serial number:"
+                    style="@style/Widget.Label"
+                    />
+            <TextView
+                    android:id="@+id/text_serial_number"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="unknown"
+                    />
+        </TableRow>
+
     </TableLayout>
 </ScrollView>
