--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,4 +11,7 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:textColor">@android:color/primary_text_dark</item>
     </style>
+    <style name="Widget.Value" parent="android:TextAppearance.Small">
+        <item name="android:ellipsize">end</item>
+    </style>
 </resources>
