--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,6 +4,7 @@
             android:layout_height="match_parent"
         >
     <TableLayout
+            android:id="@+id/table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
