--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,5 @@
 <resources>
     <style name="Widget.Category" parent="android:TextAppearance.Holo.Medium">
-        <item name="android:layout_marginRight">10dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">3dp</item>
@@ -9,10 +8,12 @@
     </style>
     <style name="Widget.Label" parent="android:TextAppearance.Holo.Small">
         <item name="android:layout_marginRight">10dp</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
     <style name="Widget.Value" parent="android:TextAppearance.Holo.Small">
         <item name="android:ellipsize">end</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textColor">?android:attr/textColorSecondary</item>
     </style>
 </resources>
